--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.18",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.416.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
